--- a/Jogo da velha/index.css
+++ b/Jogo da velha/index.css
@@ -7,7 +7,7 @@
 body{
     height: 100vh;
     width: 100vw;
-    background: linear-gradient(90deg, #c41b04 0%, #e4b007 100%);
+    background: linear-gradient(90deg, #c41b04 0%, #e49e07 100%);
 }
 
 .winning-message{
@@ -116,7 +116,7 @@ body{
     right: 0;
     justify-content: center;
     align-items: center;
-    background-color: #00000093;
+    background-color: #0000009d;
     flex-direction: column;
 }
 
@@ -139,4 +139,8 @@ body{
 .winning-message-text{
     color: #fff;
     font-size: 5rem;
+}
+
+.show-winning-message{
+    display: flex;
 }
