--- a/Jogo da memória/CSS/login.css
+++ b/Jogo da memória/CSS/login.css
@@ -22,6 +22,9 @@
     color: #333;
     font-size: 1.5em;
 }
+.login-header p{
+    color: #333;   
+}
 
 .login-input {
     border: 2px solid #333;
